# 3RPS-VISION

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: test.yml
arduino/: controll_1.ino
arduino/Code3RPS/: Code3RPS.ino
arduino/controll_2/: controll_2.ino
arduino/controll_3/: controll_3.ino
data/data_1/: fc1.txt  grafik.txt  pos2.txt  velo1.txt
data/data_2/: fc2.txt  fc3.txt  velo1.txt  velo3.txt
data/data_3/: fc1.txt  (+5 more)
docs/: ARCHITECTURE.md  INTEGRATION.md  SETUP.md  STRUCTURE.md  Summary.md  index.md  instalasi.md  penggunaan.md
include/: Config.h  ControlHandler.h  GraphManager.h  ModbusHandler.h  SerialHandler.h  StateHandlers.h  StateMachine.h  TrajectoryManager.h
scripts/: Guide_scripts.md  build_firmware.sh  build_server.sh  formad_code.sh  install_dependencies.sh  run_vision.sh  test_system.sh
server/: Build&Run.txt  CMakeLists.txt  Guide&Doc.txt
server/manual_main/: Guide&Doc.md
server/src/: main_server.cpp
server/src/config/: PathConfig.h  trajectory_paths.h
server/src/modbus/: DataHandler.cpp  DataHandler.h  ModbusServer.cpp  ModbusServer.h
server/src/serial/: SerialPort.cpp  SerialPort.h
server/src/state_machine/: StateHandlers.cpp  StateHandlers.h  StateMachine.cpp  StateMachine.h
server/src/trajectory/: TrajectoryManager.cpp  TrajectoryManager.h
server/tests/: test_server_arduino.cpp  test_trajectory.cpp
src/: ControlHandler.cpp  GraphManager.cpp  ModbusHandler.cpp  SerialHandler.cpp  StateHandlers.cpp  TrajectoryManager.cpp
tests/: acceptance_tests.py  integration_test.py  performance_test.py
(+37 files in other folders)
